--- a/tests/map/src/App.css
+++ b/tests/map/src/App.css
@@ -1,3 +1,7 @@
+$shadow-color: #646cffaa;
+$react-shadow-color: #61dafbaa;
+$read-the-docs-color: #888;
+
 #root {
   width: 100vw;
   margin: 0 auto;
@@ -10,14 +14,14 @@
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
-}
 
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
+  &:hover {
+    filter: drop-shadow(0 0 2em $shadow-color);
+  }
 
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  &.react:hover {
+    filter: drop-shadow(0 0 2em $react-shadow-color);
+  }
 }
 
 @keyframes logo-spin {
@@ -31,8 +35,10 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  a:nth-of-type(2) {
+    .logo {
+      animation: logo-spin infinite 20s linear;
+    }
   }
 }
 
@@ -41,7 +47,7 @@
 }
 
 .read-the-docs {
-  color: #888;
+  color: $read-the-docs-color;
 }
 
 * {
@@ -53,13 +59,11 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-} 
-
+}
 
 #map-container {
   height: 80vh;
   width: 100vw;
   padding: 1rem;
-  border: 2px solid black;
   border-radius: 0.5em;
 }
