--- a/tests/map/src/App.scss
+++ b/tests/map/src/App.scss
@@ -1,10 +1,8 @@
-// Define your variables
 $primary-color: black;
-$secondary-color: #f5f5f5;
-$tertiary-color: #4caf50;
-$accent-color: #f5a623;
-$danger-color: #d0021b;
+$secondary-color: white;
+$accent-color: #4caf50;
 $font-family: "Nunito", sans-serif;
+$border-radius: 0.5rem;
 
 // Global styles
 *,
@@ -13,37 +11,31 @@ $font-family: "Nunito", sans-serif;
   box-sizing: border-box;
 }
 
-html {
+html,
+body {
   box-sizing: border-box;
   -ms-overflow-style: none; // IE and Edge
   scrollbar-width: none; // Firefox
-}
-
-// Body and Root styles
-body {
   margin: 0;
   padding: 0;
   font-family: $font-family;
-  overflow: -moz-scrollbars-none; // Firefox
-  -ms-overflow-style: none; // Internet Explorer 10+
   color-scheme: light;
-  background-color: white;
   color: black;
-  -webkit-appearance: none;
+  background-image: url("./assets/0_4.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 
   // Hide scrollbar
-  &::-webkit-scrollbar,
-  & {
-    -ms-overflow-style: none; // IE and Edge
-    scrollbar-width: none; // Firefox
+  &::-webkit-scrollbar {
+    display: none;
   }
+}
 
-  #root {
-    width: 100vw;
-    margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
-  }
+#root {
+  width: 100vw;
+  margin: 0 auto;
+  text-align: center;
 }
 
 // Main layout styles
@@ -55,64 +47,118 @@ main {
 }
 
 // Calculator component styles
-#calculadora {
-  background-color: $accent-color;
-  width: 100vw;
+#calculadora,
+#calculadora-active {
+  margin: 1rem;
   padding: 1rem;
+  border-radius: $border-radius;
   display: grid;
   gap: 1ch;
+  background-color: rgba($accent-color, 0.4); // Semi-transparent background
+  backdrop-filter: blur(5px); // Standard syntax
+  -webkit-backdrop-filter: blur(5px); // Safari/WebKit prefix
 
-  // Input, Swap, and Button styles
-  input {
-    padding: 1rem;
-    border: 2px solid $primary-color;
-    font-size: 1rem;
-    border-radius: 0.5rem;
-    &:focus {
-      outline: none;
-      border-bottom: none;
-    }
-
-    &::placeholder {
-      color: $primary-color;
-    }
+  // Fallback for browsers that don't support backdrop-filter
+  @supports not (
+    (backdrop-filter: blur(5px)) or (-webkit-backdrop-filter: blur(5px))
+  ) {
+    background-color: rgba(255, 255, 255, 0.5);
   }
+}
 
-  #swap {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: $primary-color;
-    border-radius: 0.5rem;
-    padding: 0.5rem;
-
-    #swap-icon {
-      width: fit-content;
-      color: $accent-color;
-    }
-  }
-
+#calculadora-active {
+  display: flex;
+  text-transform: capitalize;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  color: $secondary-color;
+  background-color: rgba($secondary-color, 0.5);
   button {
-    border-radius: 0.5rem;
-    background-color: $secondary-color;
-    color: $primary-color;
+    margin: 0.5rem;
+    padding: 0.5rem 1rem;
+    background-color: $accent-color;
+    color: $secondary-color;
   }
+}
 
-  .vehicle-selection {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-    gap: 10px;
+// Input styles
+input {
+  padding: 1rem;
+  border: none;
+  font-size: 1rem;
+  border-radius: $border-radius;
+  &:focus {
+    outline: none;
   }
+}
+
+// Swap styles
+#swap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba($accent-color, 0.4); // Semi-transparent background
+  border-radius: $border-radius;
+  padding: 0.5rem;
+
+  #swap-icon {
+    width: fit-content;
+    color: $secondary-color;
+  }
+}
+
+// Button styles
+button {
+  text-transform: capitalize;
+  border-radius: $border-radius;
+  background-color: $accent-color;
+  color: $secondary-color;
+  outline: none;
+  &:hover {
+    outline: none;
+  }
+}
+
+#continuar {
+  // font-size: 1.5rem;
+  // padding: 0.5rem;
+  background-color: $accent-color;
+}
+
+// Vehicle selection styles
+.vehicle-selection {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
 
   .vehicle-button {
-    border: 2px solid $primary-color;
-    cursor: pointer;
-  }
-
-  .vehicle-image {
-    width: 100%;
+    border-radius: $border-radius;
+    background-color: $secondary-color;
+    color: $primary-color;
     transition: transform 0.3s ease;
+
+    &:hover,
+    &.selected {
+      transform: scale(1.1);
+      outline: none;
+    }
+
+    &.selected {
+      outline: 2px solid $accent-color;
+    }
+
+    .vehicle-image {
+      width: 100%;
+      transition: transform 0.3s ease;
+    }
   }
+}
+
+#cost {
+  color: $secondary-color;
+  background-color: $primary-color;
 }
 
 // Media query for forced colors
